2016-05-13  Nik Nyby  <nnyby@columbia.edu>

	* Fixed Go To Collection link.

2016-04-19  Nik Nyby  <nnyby@columbia.edu>

	* Prevent host_url from being set when it's not https.

2016-04-04  Nik Nyby  <nnyby@columbia.edu>

	* Added more specific feedback for "Update settings" button.

2016-02-29  Nik Nyby  <nnyby@columbia.edu>

	* Updated icons.
	* Added listener for Mediathread "Update settings" button.

2016-02-19  Nik Nyby  <nnyby@columbia.edu>

	* Debounce custom url save on keyup so it doesn't fire each
	time.

2016-02-16  Nik Nyby  <nnyby@columbia.edu>

	* Host URL can now be set to anything in the
	extension options.

2016-01-21  Nik Nyby  <nnyby@columbia.edu>

	* Fix Vimeo asset collection bug.

2016-01-12  Nik Nyby  <nnyby@columbia.edu>

	* Fix bug that occurs with host url when options aren't present.

2016-01-08  Nik Nyby  <nnyby@columbia.edu>

	* Host URL is now configurable in the extension options.
	* Internal code refactoring.

2015-12-14  Nik Nyby  <nnyby@columbia.edu>

	* Fix host url messaging.

2015-12-08  Nik Nyby  <nnyby@columbia.edu>

	* Fix image collection on learn.columbia.edu.

2015-12-02  Nik Nyby  <nnyby@columbia.edu>

	* Updated mediathread-collect, containing html parsing
	security fixes.

2015-11-25  Nik Nyby  <nnyby@columbia.edu>

	* Moved init code out of common code.

2015-11-13  Nik Nyby  <nnyby@columbia.edu>

	* Moved browser-independent extension code into src/common.

2015-11-09  Nik Nyby  <nnyby@columbia.edu>

	* Fixed bug where video thumbnails could be missing when
	using the poster attribute.
	* Hide "no assets found" error when asynchronous assets
	get found.
	* Fix a display bug where the asset wasn't always centered
	on the collection page.
	* Collect fullsize images on asia.si.edu.

2015-11-04  Nik Nyby  <nnyby@columbia.edu>

	* Fix image collection overflow problem.

2015-10-30  Nik Nyby  <nnyby@columbia.edu>

	* Fix error that can occur when <video> and
	<audio> has no source.
