@@ -239,88 +239,6 @@ var hostHandler = {
         }
     },
 
-    'blakearchive.org': {
-        find: function(callback) {
-            var obj = {
-                'sources': {
-                    'title': document.title
-                },
-                'metadata': {}
-            };
-            var optUrls;
-            try {
-                optUrls = document.forms.form.elements.site.options;
-            } catch (e) {
-                return callback([]);
-            }
-            var abs = MediathreadCollect.absoluteUrl;
-            for (var i = 0; i < optUrls.length; i++) {
-                var o = optUrls[i];
-                if (/Image/.test(o.text)) {
-                    obj.sources.image = abs(o.value, document);
-                } else if (/Transcription/.test(o.text)) {
-                    obj.sources.transcript_url =
-                        abs(o.value, document);
-                    obj.metadata.Transcript =
-                        [abs(o.value, document)];
-                }
-            }
-            if (obj.sources.image) {
-                $('a').filter(function() {
-                    return /Copy\s+Information/.test(
-                        this.innerHTML);
-                }).each(function() {
-                    obj.metadata.Metadata = [
-                        abs(String(this.href)
-                            .replace(/javascript:\w+\(\'/, '')
-                            .replace(/\'\)$/, ''),
-                            document)
-                    ];
-                });
-                getImageDimensions(
-                    obj.sources.image,
-                    function onload(img, dims) {
-                        obj.sources['image-metadata'] = dims;
-                        callback([obj]);
-                    },
-                    function error(e) {
-                        // Error, maybe the url isn't a straight image
-                        // file? In that case, load the URL as a document
-                        // and get the enlarged image.
-                        // e.g.
-                        //
-                        // http://www.blakearchive.org/exist/blake/archive/object.xq?objectid=milton.a.illbk.33
-                        //  ->
-                        // http://www.blakearchive.org/exist/blake/archive/enlargement.xq?objectdbi=milton.a.p33
-                        $.get(obj.sources.image)
-                            .done(function(doc) {
-                                var $img = $(doc).find('#enlargedImage');
-                                var src = $img.attr('src');
-                                if (!src.match(/^http/)) {
-                                    // make the src absolute
-                                    src = 'http://' +
-                                        document.location.hostname + src;
-                                }
-                                obj.sources.image = src;
-                                getImageDimensions(
-                                    src,
-                                    function onload(img, dims) {
-                                        obj.sources['image-metadata'] =
-                                            dims;
-                                        callback([obj]);
-                                    },
-                                    function(error) {
-                                        callback([]);
-                                    });
-                            })
-                            .fail(function() {
-                                callback([]);
-                            });
-                    });
-            }
-        }
-    },
-
     // first version of this added by Eddie 10/28/11:
     'classpop.ccnmtl.columbia.edu': {
         find: function(callback) {
