@@ -1,3 +1,7 @@
+2017-02-13  Nik Nyby  <nnyby@columbia.edu>
+
+	* Fixed image collection on blakearchive.org.
+
 2016-05-13  Nik Nyby  <nnyby@columbia.edu>
 
 	* Fixed Go To Collection link.
